pkgdata_DATA =  alien_top4.png     explosion1.png  seekrocket.png                 \
		NeonFont.png    alien_top5.png     fighter.png     shot.png       \
		StoneFont.png   alienshot.wav      highscores      shot.wav       \
		alien.jpg       background.jpg     invader.png     shot2.png      \
		alien_top0.png  blockade.png       invader2.png    siegbild.jpg   \
		alien_top1.png  bomb.png           night-city.jpg  startbild.jpg  \
		alien_top2.png  bombexplosion.wav  pennight.mod                   \
		alien_top3.png  explosion.wav      rocket.png                     

EXTRA_DIST=$(pkgdata_DATA)
